Inserindo informação da lista de alunos vazia.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Agenda</string>
+    <string name="aactivity_lista_alunos_vazia">Nenhum aluno cadastrado :(</string>
 </resources>
