Adicionando internacionalização no strings.xml para en-US e referênciando as strings do layout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">Agenda</string>
-    <string name="aactivity_lista_alunos_vazia">Nenhum aluno cadastrado :(</string>
+    <string name="app_name" >Agendinha</string>
+    <string name="formulario_hint_nome" >Nome</string>
+    <string name="formulario_hint_telefone" >Telefone</string>
+    <string name="formulario_hint_e_mail" >E-mail</string>
+    <string name="botao_salvar_aluno" >Salvar aluno</string>
+    <string name="lista_alunos_menu_remover" >Remover</string>
 </resources>
